--- a/lesson25.01/index.html
+++ b/lesson25.01/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Colors,Todo-List</title>
+  </head>
+  <body>
+    <h1>Choose the color:</h1>
+    <button class="red">Red</button>
+    <button class="green">Green</button>
+    <button class="blue">Blue</button>
+    <button class="black">Black</button>
+    <button class="yellow">Yellow</button>
+    <h1>The rectangle:</h1>
+    <div class="rectangle"></div>
+
+
+    <!-- task -->
+<h1>To-Do-List</h1>
+    <input type="text" class="input" placeholder="enter a task" />
+    <button class="addBtn">Add a task</button>
+    <ul class="list"></ul>
+
+  </body>
+  <script src="script.js"></script>
 </html>
